--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <div class="container">
   <img src="assets/images/logo.jpg" class="img-fluid w-100" alt="imagen-vehiculos-segunda-mano">
   <app-list-vehicles></app-list-vehicles>
+  <div class="container">
+    <footer class="py-3 my-4">
+      <p class="text-center text-muted">Contactanos 01-800-55-90 info@tusegundazo.com, @tusegundazo</p>
+    </footer>
+  </div>
 </div>
